<resources>
    <string name="app_name">QR Code Reader</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Registar</string>
    <string name="loginNow">Clique aqui para fazer Login</string>
    <string name="registerNow">Clique aqui para se registar</string>
    <string name="ler_qr_code">Ler QR Code</string>
    <string name="nome">Nome</string>
    <string name="empresa">Empresa</string>
    <string name="registar_convidado">Registar Convidado</string>
    <string name="erro_convidado_n_existe">Erro: Convidado não existe</string>
    <string name="convidado_ja_entrou">Atenção: O convidado já entrou!</string>
</resources>